feat: add evaluation definition and start
